# VirtualKeyboard

c/: CMakeLists.txt
c/include/: detect.hpp  player.hpp
c/src/: deal.cpp  detect.cpp  main.cpp  player.cpp
